--- a/style.css
+++ b/style.css
@@ -375,6 +375,27 @@ body{
   background: whitesmoke;
   border-radius: 20px;
   z-index: 2;
+  margin-top: 30%;
+  margin-left: 30%;
+
+}
+.popClass #popClose{
+  padding: 8px 8px 8px 8px;
+  position: absolute;
+  color: #000;
+  top: 0;
+  font-size: 20px;
+  margin-left: 75%;
+  margin-top: 1%;
+  -webkit-transition: all .2s ease-in;
+  transition: all .2s ease-in;
+  animation: fadeIn .2s ease;
+  animation-fill-mode: forwards;
+  border-radius: 100%;
+}
+.popClass #popClose:hover {
+  color: rgb(139, 139, 139);
+  background-color: rgb(192, 192, 192);
 }
 .eventName{
   background-color: transparent;
